@@ -1,94 +1,182 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.dto.BookingDtoForItem;
+import ru.practicum.shareit.booking.dto.BookingMapper;
+import ru.practicum.shareit.booking.model.Booking;
+import ru.practicum.shareit.booking.repository.BookingRepository;
+import ru.practicum.shareit.exception.BadParameterException;
 import ru.practicum.shareit.exception.NotFoundException;
-import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.ItemMapper;
+import ru.practicum.shareit.item.dto.*;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-@Slf4j
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
+import static org.springframework.data.domain.Sort.Direction.ASC;
+import static org.springframework.data.domain.Sort.Direction.DESC;
+
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
-    private final ItemMapper itemMapper;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
-    public List<ItemDto> findItem(String text) {
+    public void deleteItem(long id) {
+        checkId(id);
+        itemRepository.deleteById(id);
+    }
+
+    @Transactional
+    @Override
+    public ItemDto createItem(long userId, ItemDto itemDto) {
+        User user = checkUser(userId);
+        Item itemFromDto = ItemMapper.toItem(itemDto, user);
+        Item item = itemRepository.save(itemFromDto);
+        return ItemMapper.toItemDto(item);
+    }
+
+    @Transactional
+    @Override
+    public ItemDto updateItem(long userId, ItemDto itemDto, long itemId) {
+        checkId(itemId);
+        checkUser(userId);
+        Item itemFromRep = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Предмета с ID " + itemId + " не зарегистрировано"));
+        if (itemFromRep.getUser().getId() != userId) {
+            throw new NotFoundException("Пользователь с ID " + userId + " не является владельцем вещи c ID "
+                    + itemId + ". Изменение запрещено");
+        }
+        Item item = ItemMapper.toItem(itemDto, itemFromRep);
+        item.setId(itemId);
+
+        return ItemMapper.toItemDto(itemRepository.save(item));
+    }
+
+    @Override
+    public List<ItemDto> search(String text) {
         if (text.isBlank()) {
-            return Collections.emptyList();
-        } else {
-            List<Item> items = itemRepository.findItem(text);
-            List<ItemDto> itemsDto = new ArrayList<>();
-
-            for (Item item : items) {
-                itemsDto.add(itemMapper.convert(item));
-            }
-            return itemsDto;
+            return List.of();
         }
+        List<Item> itemsList = itemRepository.search(text);
+        return itemsList.stream()
+                .map(ItemMapper::toItemDto)
+                .collect(toList());
     }
 
     @Override
-    public List<ItemDto> getAll(int userId) {
-        List<Item> items = itemRepository.getAllUsersItems(userId);
-        List<ItemDto> itemsDto = new ArrayList<>();
+    public ItemDtoDated getItemById(long userId, long itemId) {
+        checkId(itemId);
+        checkUser(userId);
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Предмета с ID " + itemId + " не зарегистрировано"));
+        List<CommentDtoOut> comments = commentRepository.findCommentsByItemId(itemId).stream()
+                .map(CommentMapper::toCommentDto)
+                .collect(toList());
+        if (item.getUser().getId() != userId) {
+            return ItemMapper.toItemDto(item, null, null, comments);
+        }
+        List<Booking> lastBookings = bookingRepository.findLastBookingByItemId(itemId, LocalDateTime.now(),
+                Sort.by(DESC, "start"));
+        BookingDtoForItem lastBooking = BookingMapper.toItemBookingDto(lastBookings.isEmpty()
+                ? null : lastBookings.get(0));
+        List<Booking> nextBookings = bookingRepository.findNextBookingByItemId(itemId, LocalDateTime.now(),
+                Sort.by(ASC, "start"));
+        BookingDtoForItem nextBooking = BookingMapper.toItemBookingDto(nextBookings.isEmpty()
+                ? null : nextBookings.get(0));
+
+        return ItemMapper.toItemDto(item, lastBooking, nextBooking, comments);
+    }
+
+    @Override
+    public List<ItemDtoDated> getUserItems(long userId) {
+        checkUser(userId);
+
+        List<Item> items = itemRepository.findAllItemsByUserIdOrderById(userId);
+        if (items.isEmpty()) {
+            throw new NotFoundException("Пользователь " + userId + " не является хозяином ни одной вещи");
+        }
+
+        List<Long> itemIds = new ArrayList<>();
         for (Item item : items) {
-            itemsDto.add(itemMapper.convert(item));
+            itemIds.add(item.getId());
         }
-        return itemsDto;
-    }
+        List<ItemDtoDated> datedItemList = new ArrayList<>();
+        Map<Item, List<Booking>> lastBookingsMap = bookingRepository.findLastBookingsByUserIdByItemIn(userId,
+                        LocalDateTime.now(), itemIds, Sort.by(DESC, "start"))
+                .stream()
+                .collect(groupingBy(Booking::getItem, toList()));
+        Map<Item, List<Booking>> nextBookingsMap = bookingRepository.findNextBookingsByUserIdByItemIn(userId,
+                        LocalDateTime.now(), itemIds, Sort.by(ASC, "start"))
+                .stream()
+                .collect(groupingBy(Booking::getItem, toList()));
+        Map<Item, List<Comment>> comments = commentRepository.findByItemIn(itemIds,
+                        Sort.by(DESC, "created"))
+                .stream()
+                .collect(groupingBy(Comment::getItem, toList()));
 
-    @Override
-    public ItemDto getItem(int id) {
-        checkId(id);
-        Item item = itemRepository.getItem(id)
-                .orElseThrow(() -> new NotFoundException(String.format("Item № %d not found", id)));
-        return itemMapper.convert(item);
-    }
+        for (Item item : items) {
+            Booking lastBooking = null;
+            Booking nextBooking = null;
 
-    @Override
-    public ItemDto create(ItemDto itemDto, int userId) {
-        checkId(userId);
-        User user = userRepository.getUser(userId)
-                .orElseThrow(() -> new NotFoundException(String.format("User № %d not found", userId)));
-        Item item = itemRepository.create(itemMapper.convert(itemDto), user);
-        return itemMapper.convert(item);
-    }
-
-    @Override
-    public ItemDto update(int id, int userId, ItemDto itemDto) {
-        checkId(id);
-        checkId(userId);
-        User user = userRepository.getUser(userId) // Проверка существования пользователя
-                .orElseThrow(() -> new NotFoundException(String.format("User № %d not found", userId)));
-        if (itemRepository.getUsersItemsId(userId).contains(id)) { // проверка принадлежности предмета к пользователю
-            Item item = itemRepository.update(id, userId, itemMapper.convert(itemDto));
-            return itemMapper.convert(item);
-        } else {
-            throw new NotFoundException("Этот предмет не принадлежит данному пользователю");
+            if (lastBookingsMap.get(item) != null && lastBookingsMap.get(item).get(0) != null) {
+                lastBooking = lastBookingsMap.get(item).get(0);
+            }
+            if (nextBookingsMap.get(item) != null && nextBookingsMap.get(item).get(0) != null) {
+                nextBooking = nextBookingsMap.get(item).get(0);
+            }
+            List<CommentDtoOut> commentsList = comments.getOrDefault(item,
+                    List.of()).stream().map(CommentMapper::toCommentDto).collect(Collectors.toList());
+            datedItemList.add(ItemMapper.toItemDto(item, BookingMapper.toItemBookingDto(lastBooking),
+                    BookingMapper.toItemBookingDto(nextBooking), commentsList));
         }
+        return datedItemList;
     }
 
+    @Transactional
     @Override
-    public void deleteItem(int id) {
-        checkId(id);
-        itemRepository.deleteItem(id);
+    public CommentDtoOut saveComment(long userId, long itemId, CommentDtoIn commentDto) {
+        checkId(itemId);
+        User user = checkUser(userId);
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Предмета с ID " + itemId + " не зарегистрировано"));
+        List<Booking> bookings = bookingRepository.findAllByBookerIdAndItemId(userId, itemId, LocalDateTime.now());
+        if (bookings.isEmpty()) {
+            throw new BadParameterException("Пользователь " + userId + " не арендовал вещь "
+                    + itemId + ". Не имеет права писать отзыв");
+        }
+        Comment comment = CommentMapper.toComment(commentDto, item, user);
+
+        return CommentMapper.toCommentDto(commentRepository.save(comment));
+    }
+
+    private User checkUser(long userId) {
+        checkId(userId);
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с ID " + userId + " не зарегистрирован"));
     }
 
     private void checkId(long userId) {
         if (userId <= 0) {
-            throw new NotFoundException("id must be positive");
+            throw new BadParameterException("id must be positive");
         }
     }
 }
